# micro-snark-server

./: .gitmodules  Makefile  README.md  go.mod  main.go
api/v1/: api_v1.proto  api_v1_status.proto  error_reason.proto
cmd/snark_server/: main.go  wire.go
internal/conf/: registry.go  server.go
internal/data/: data.go  task.go
internal/server/: grpc.go  http.go
internal/service/: Snarker.go  service.go  snarker.go  snarker_status.go  task.go  worker.go
internal/snark-ffi/: snark.go  snarkcrypto.h
internal/snark-ffi/rust/rust-fil-proofs/: Cargo.toml  README.md
internal/snark-ffi/rust/src/: lib.rs  types.rs
internal/task/: task.go
snark-ffi/: snark.go  snarkcrypto.h
snark-ffi/rust/: Cargo.toml  Makefile
snark-ffi/rust/src/: api.rs  lib.rs  proofs.rs  types.rs
