[package]
name = "snarkcrypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
filecoin-proofs = { path = "./rust-fil-proofs/filecoin-proofs", default-features = false }
storage-proofs-core = { path = "./rust-fil-proofs/storage-proofs-core", version = "^10.0.0", default-features = false }
storage-proofs-post = { path = "./rust-fil-proofs/storage-proofs-post", version = "^10.0.0", default-features = false }
libc = "0.2"
drop_struct_macro_derive = "0.5.0"
ffi-toolkit = "0.5.0"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
fil_logger = "0.1"
log = "0.4.7"